# alix-cli

./: .gitignore  CONTRIBUTING.md  FUZZY_SEARCH.md  Makefile  README.md  TESTING.md  aliases.json  pyproject.toml  test_params_quick.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  feature_request.md
.github/workflows/: ci.yml
alix/: cli.py  clipboard.py  config.py  history_manager.py  models.py  parameters.py  porter.py  render.py  scanner.py  shell_detector.py  shell_integrator.py  shell_wrapper.py  storage.py  template_manager.py  tui.py  usage_tracker.py
alix/templates/: docker.yaml  git.yaml  k8s.yaml
tests/: conftest.py  test_cli.py  test_cli_templates.py  test_clipboard.py  test_config.py  test_fuzzy_search.py  test_parameters.py  test_porter.py  test_render.py  test_scanner.py  test_shell_detector.py  test_shell_integrator.py  test_shell_wrapper.py  test_storage.py  test_template_manager.py  test_tui.py  test_undo_redo.py  test_usage_tracking.py
