[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alix-cli"
version = "0.1.0"
description = "Interactive alias manager for your shell"
authors = [{name = "TheDevOpsBlueprint"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "textual>=0.40.0",
    "pyperclip>=1.8.0",
    "pyyaml>=6.0.0",
    "rapidfuzz>=3.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "freezegun>=1.5.5",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
alix = "alix.cli:main"

[tool.setuptools.packages.find]
exclude = ["backups*"]

[tool.pytest.ini_options]
addopts = "--cov=alix --cov-branch --cov-report=term-missing"
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info", "venv", "alix-venv"]
